# retirement-engine

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: overview.md  report-design-inventory.md  report-design.md  todo.md  workbook.md
env/: config.example.yml  config.yml
resources/: template.xlsx
resources/branding/: README.md
resources/workbooks/: example.xlsx  template.xlsx
src/retirement_engine/: __main__.py  bootstrap.py  cli.py  config.py  version.py
src/retirement_engine/analysis/: __init__.py  expense_summary.py  readiness.py
src/retirement_engine/calculators/: __init__.py  assets.py  budget.py  income.py  insurance.py  liabilities.py  reserves.py
src/retirement_engine/projections/: __init__.py  annual.py  retirement_date.py
src/retirement_engine/reports/: __init__.py  console.py
src/retirement_engine/reports/core/: __init__.py  __main__.py  artifacts.py  branding.py  contracts.py  paths.py  registry.py
src/retirement_engine/reports/core/renderers/: __init__.py
src/retirement_engine/reports/retirement_summary/: __init__.py
src/retirement_engine/reports/retirement_summary/pdf/: __init__.py  charts.py  context.py  findings.py  render.py
src/retirement_engine/workbook/: __init__.py  reader.py  summary.py  validation.py
tests/: test_annual_projection.py  test_asset_calculator.py  test_bootstrap.py  test_budget_calculator.py  test_cli.py  test_config.py  test_console_report.py  test_expense_summary.py  test_income_calculator.py  test_insurance_calculator.py  test_liability_calculator.py  test_pdf_charts.py  test_readiness.py  test_report_branding.py  test_reserve_calculator.py  test_retirement_date_estimator.py  test_retirement_summary_pdf_report.py  test_version.py  test_workbook_reader.py  test_workbook_summary.py  test_workbook_validation.py
tools/: generate_template.py  validate_workbook.py
(+17 files in other folders)
