[project]
name = "retirement-engine"
version = "0.1.0"
description = "Retirement planning engine."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = []

[tool.poetry]
packages = [{ include = "retirement_engine", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["retirement_engine"]
