[project]
name = "retirement-engine"
dynamic = ["version"]
description = "Retirement planning engine."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openpyxl>=3.1.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.scripts]
retirement-engine = "retirement_engine.bootstrap:main"

[tool.poetry]
packages = [{ include = "retirement_engine", from = "src" }]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.10.0,<2.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "VERSION"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"
mypy = "^1.16.1"
types-pyyaml = "^6.0.12.20260518"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.10.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["retirement_engine"]

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true
